# linutil-gui

./: AGENTS.md  README.md
core/src/: inner.rs
tui/: Cargo.toml
tui/src/: gtk_app.rs  main.rs  theme.rs
