[package]
name = "linutil_tui"
description = "Chris Titus Tech's Linux Toolbox - Linutil is a distro-agnostic toolbox designed to simplify everyday Linux tasks."
documentation = "https://christitustech.github.io/linutil"
readme = "../README.md"
edition = "2021"
license.workspace = true
repository = "https://github.com/ChrisTitusTech/linutil/tree/main/tui"
version.workspace = true
include = ["src/*.rs", "Cargo.toml", "cool_tips.txt", "../man/linutil.1"]

[[bin]]
name = "linutil"
path = "src/main.rs"

[features]
default = ["tips"]
tips = ["rand"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
gtk4 = { version = "0.8", package = "gtk4" }
linutil_core = { version = "25.12.18", path = "../core" }
nix = { version = "0.29.0", features = [ "user" ] }
portable-pty = "0.8.1"
rand = { version = "0.8.5", optional = true }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"], default-features = false }
